--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -283,8 +283,25 @@
 	         		<label class="checkbox xa-pay-method">在线支付</label>
 	         	{%endif%}
 				</div>
-
 			</div>
+
+            <div class="form-group">
+                <label class="control-label col-sm-2 col-sm-offset-1">商品发票：</label>
+                <div class="col-sm-9" style="margin-top: -6px;">
+                    <label class="checkbox inline tx-checkbox-item" >
+                        <input
+                            type='checkbox'
+                            id='is_enable_bill'
+                            name='is_enable_bill'
+                            class="product_bill"
+                            value="1"
+                            {% if product.is_enable_bill %}checked="checked"{% endif %}
+                        />
+                        <p class="xui-bold">支持发票</p>
+                    </label>
+                </div>
+            </div>
+
 		</fieldset>
 	</section>
 
