--- a/weapp/static_v2/js/view/mall_order_buyer_hint_view/template.html
+++ b/weapp/static_v2/js/view/mall_order_buyer_hint_view/template.html
@@ -3,7 +3,9 @@
 	<div style="margin-left: 14px;">${addr}</div>
 	<div style="margin-left: 14px;">电话：${tel}</div>
 	<div style="margin-left: 14px;">买家留言：${message}</div>
-	<div><b>发票信息</b></div>
-	<div style="margin-left: 14px;">发票抬头：${bill_type}</div>
-	<div style="margin-left: 14px;">${bill}</div>
+    {{if bill_type != 0 }}
+    	<div><b>发票信息</b></div>
+    	<div style="margin-left: 14px;">发票抬头：${bill_type}</div>
+    	<div style="margin-left: 14px;">${bill}</div>
+    {{/if}}
 </script>
