--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -40,7 +40,7 @@
                     <div class="wui-i-text">
                         <p>当前金额</p>
                     </div>
-                    <div class="wui-i-money">
+                    <div class="wui-i-money wa-i-current_money">
                         0.00元
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                 <div class="wui-i-bar">
 
                 </div>
-                <div class="wui-i-power_money">
+                <div class="wui-i-power_money wa-i-red_packet_money">
                     <p>总金额0.00元</p>
                 </div>
             </div>
