--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
@@ -8,12 +8,12 @@
         }
     </style>
 {% block content-panel %}
-<div class="xui-PowerMeParticipancesAppPage xui-appPage-commonStyle">
+<div class="xui-RedPacketParticipancesAppPage xui-appPage-commonStyle">
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
 			<li><a href="/apps/">百宝箱</a></li>
-			<li><a href="/apps/powerme/powermes/">微助力</a></li>
+			<li><a href="/apps/red_packet/red_packets/">拼红包</a></li>
 			<li class="active">查看结果</li>
 		</ul>
 	</div>
@@ -69,8 +69,8 @@
 		<div 
 			class="panel-body panel-table p0 mt10"
 			data-ui-role="advanced-table" 
-			data-app="apps/powerme" 
-			data-resource="powerme_participances" 
+			data-app="apps/red_packet"
+			data-resource="red_packet_participances"
 			data-args='{"id": "{{activity_id}}"}'
 			data-template-id="#table" 
 			data-enable-paginator="true" 
@@ -92,7 +92,7 @@
 	    "task": "weizoom-load-app-views-dialogs"
 	  }
 	-->
-{{ "powerme"|load_app_views_and_dialogs|safe }}
+{{ "red_packet"|load_app_views_and_dialogs|safe }}
 <!-- *end_prunt_task* -->
 {% verbatim %}
 <script id="table" type="text/x-jquery-tmpl">
@@ -100,25 +100,41 @@
 	<table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10">
 		<thead>
 			<tr>
-			    <th width='50'>排名</th>
 				<th>用户名</th>
-				<th>助力值</th>
+				<th>红包金额</th>
+				<th>已获取金额</th>
+				<th>红包状态</th>
+				<th>发放状态</th>
 				<th>参与时间</th>
+				<th>操作</th>
 			</tr>
 		</thead>
 		<tbody>
 		  {{each(i, item) items}}
 			<tr data-id="${item.id}">
-			    <td>${item.ranking}</td>
 				<td class="tl pl25">
 					<img width=60 height=60 src="${item.participant_icon}" />
 					{{html item.participant_name}}
 				</td>
 				<td>
-				    ${item.power}<a class="btn btn-primary hidden-btn" style="display: none;" href="/apps/powerme/powerme_participance_detail/?member_id=${item.member_id}&belong_to=${item.belong_to}" target="_blank">查看详情</a>
+					${item.red_packet_money}
+				</td>
+				<td>
+					${item.current_money}
+				</td>
+				<td>
+					${item.red_packet_status}
+				</td>
+				<td>
+					${item.is_already_paid}
 				</td>
 				<td>
 					${item.created_at}
+				</td>
+				<td>
+					{{if (item.red_packet_status === '成功' && item.is_already_paid === '未发放')}}
+					<a href="javascript:void(0)" class="xa-pay" data-id=${item.id}>发放</a>
+					{{/if}}
 				</td>
 			</tr>
 			{{/each}}
@@ -139,7 +155,7 @@
 $(document).ready(function() {
 	$('body').delegate('.xa-viewData', 'click', function(event) {
 		var activityId = $(event.currentTarget).parents('tr').data('id');
-		W.dialog.showDialog('W.dialog.app.powerme.ViewParticipanceDataDialog', {
+		W.dialog.showDialog('W.dialog.app.red_packet.ViewParticipanceDataDialog', {
 			activityId: activityId,
 			success: function(data) {
 				alert(data);
@@ -169,8 +185,8 @@ $(document).ready(function() {
         var export_id =window.location.search.split('?id=')[1];
         W.getApi().call({
             method: 'get',
-            app: 'apps/powerme',
-            resource: 'powerme_participances_export',
+            app: 'apps/red_packet',
+            resource: 'red_packet_participances_export',
             args: {
 				'export_id': export_id,
 				'name': participant_name,
