--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -50,7 +50,7 @@
                     0%
                 </div>
                 <div class="wui-i-bar">
-
+                 <div class="wui-i-bar_process"></div>
                 </div>
                 <div class="wui-i-power_money">
                     <p>总金额0.00元</p>
