--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1512,6 +1512,24 @@ li.wui-selectBox-display-table {
     margin-left: auto;
     margin-right: auto;
 }
+.wui-red_packet-container .wui-i-powerbar_group .wui-i-bar .wui-i-bar_process{
+    background: #FF6E02;
+    width: 0%;
+    height: 100%;
+    animation: load 3s ease-in-out 1 forwards;
+}
+.wui-red_packet-container .wui-i-powerbar_group .wui-i-percentbox{
+    /*animation: load 3s ease-in-out 1 forwards;*/
+}
+
+@keyframes load {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 80%;
+    }
+}
 .wui-red_packet-container .wui-i-powerbar_group .wui-i-power_money{
     width: 70%;
     margin: 5px auto 5px auto;
