进度条动画效果

--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -46,8 +46,10 @@
                 </div>
             </div>
             <div class="wui-i-powerbar_group">
-                <div class="wui-i-percentbox">
-                    0%
+                <div class="wui-i-box">
+                    <div class="wui-i-percentbox">
+                        0%
+                    </div>
                 </div>
                 <div class="wui-i-bar">
                  <div class="wui-i-bar_process"></div>
