修改文字描述

--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -297,7 +297,7 @@
                             value="1"
                             {% if product.is_enable_bill or not product %}checked="checked"{% endif %}
                         />
-                        <p class="xui-bold">支持发票</p>
+                        <p class="xui-bold">支持开票</p>
                     </label>
                 </div>
             </div>
