--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
@@ -102,6 +102,7 @@
 				<th>活动名称</th>
 				<th>开始时间</th>
 				<th>结束时间</th>
+				<th>红包类型</th>
 				<th>活动状态</th>
 				<th>参与人数</th>
 				<th>总金额</th>
@@ -131,6 +132,9 @@
 				</td>
 				<td>
 					${item.end_time}
+				</td>
+				<td>
+					${item.type}
 				</td>
 				<td>
 					${item.status}
