--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -79,6 +79,74 @@
                 <button class="wui-i-btn-power wa-power wui-hide"><span class="wa-power-btn-action">帮</span><span class="wa-mobile_solution">asdasda</span><span>点赞</span></button>
                 <button class="wui-i-btn-using wa-using wui-hide">我也要参加</button>
             </div>
+
+            <div class="wui-i-states">
+                <div class="wui-i-title" style="text-align: center;color:white;font-weight:normal;">
+                    <span class="wui-i-helper-title-content">
+                        <hr style="height:1px;width:6rem;display:inline-block;border:none;border-top:1px solid #6C0000;" />
+                        <b>已贡献好友</b>
+                        <hr style="height:1px;width:6rem;display:inline-block;border:none;border-top:1px solid #6C0000;" />
+                    </span>
+                </div>
+                <div class="xui-top100 wa-top100">
+
+                    <div class="wui-i-friend">
+                    <div  class="wui-i-avatarbox">
+                        <div class="wui-i-avatar"></div>
+                    </div>
+                        <div class="wui-i-info">
+                            <li class="wui-i-money">2.05元</li>
+                            <li class="wui-i-name">一起来笑</li>
+                        </div>
+                    </div>
+                    <div class="wui-i-friend">
+                    <div  class="wui-i-avatarbox">
+                        <div class="wui-i-avatar"></div>
+                    </div>
+                        <div class="wui-i-info">
+                            <li class="wui-i-money">2.05元</li>
+                            <li class="wui-i-name">一起来笑</li>
+                        </div>
+                    </div>
+                    <div class="wui-i-friend">
+                    <div  class="wui-i-avatarbox">
+                        <div class="wui-i-avatar"></div>
+                    </div>
+                        <div class="wui-i-info">
+                            <li class="wui-i-money">2.05元</li>
+                            <li class="wui-i-name">一起来笑</li>
+                        </div>
+                    </div>
+                    <div class="wui-i-friend">
+                    <div  class="wui-i-avatarbox">
+                        <div class="wui-i-avatar"></div>
+                    </div>
+                        <div class="wui-i-info">
+                            <li class="wui-i-money">2.05元</li>
+                            <li class="wui-i-name">一起来笑</li>
+                        </div>
+                    </div>
+                    <div class="wui-i-friend">
+                    <div  class="wui-i-avatarbox">
+                        <div class="wui-i-avatar"></div>
+                    </div>
+                        <div class="wui-i-info">
+                            <li class="wui-i-money">2.05元</li>
+                            <li class="wui-i-name">一起来笑</li>
+                        </div>
+                    </div>
+                    <div class="wui-i-friend">
+                    <div  class="wui-i-avatarbox">
+                        <div class="wui-i-avatar"></div>
+                    </div>
+                        <div class="wui-i-info">
+                            <li class="wui-i-money">2.05元</li>
+                            <li class="wui-i-name">一起来笑</li>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </div>
 {% endifequal %}
