--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -89,7 +89,7 @@
                     </span>
                 </div>
                 <div class="xui-top100 wa-top100">
-
+                <!-- 测试格式 -->
                     <div class="wui-i-friend">
                     <div  class="wui-i-avatarbox">
                         <div class="wui-i-avatar"></div>
@@ -145,6 +145,7 @@
                         </div>
                     </div>
 
+                <!-- 测试格式end -->
                 </div>
             </div>
         </div>
