--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -51,21 +51,28 @@
         width: 45px;
     }
     .xui-successHint {
-        background: none repeat scroll 0 0 #fff;
-        border-radius: 16px;
+        background: no-repeat scroll 0 0 url("/termite_static/img/component/redpacket/success_msg.png");
+         border-radius: 3px;
         left: 12%;
         padding: 16% 10% 16% 9%;
         position: fixed;
         top: 20%;
         width: 60%;
+        height: 15%;
         z-index: 11111;
         text-align: center;
+        background-position: 5px -20px;
+        background-size: 85%;
     }
-    .xui-spritebg.xui-successHint-img {
-        display: inline-block;
-        height: 33px;
-        width: 46px;
-        float: left;
+    .xui-successHint .xui-i-intro_text {
+        font-weight: bold;
+    }
+    .xui-successHint .xui-i-intro_num {
+        color:#C11F20;
+        font-weight: bold;
+    }
+    .xui-successHint .xui-i-num {
+        font-size: 280%;
     }
     .xui-attention{
         position: fixed;
@@ -134,8 +141,10 @@
 
     <div class="xui-powerSucceed none">
         <div class="f15 xui-successHint xui-spritebg">
-            <div class="xui-spritebg xui-successHint-img"></div>
-            <div style="display: inline-block;color: #333;width: 75%;"><p>成功帮<span class="wa-pageownername"></span>贡献</p><p>+<span class="wa-helpmoneynumber"></span>元</p></div>
+            <div style="display: inline-block;color: #333;width: 75%;">
+                <p class="xui-i-intro_text">您已为<span class="wa-pageownername">"未命名"</span>贡献</p>
+                <p class="xui-i-intro_num"><span class="xui-i-num">+</span><span class="xui-i-num wa-helpmoneynumber">0.00</span><span>元</span></p>
+            </div>
         </div>
     </div>
     <!-- 非会员引导 -->
