--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -89,61 +89,15 @@
                 </div>
                 <div class="xui-top100 wa-top100">
                 <!-- 测试格式 -->
-                    <div class="wui-i-friend">
-                    <div  class="wui-i-avatarbox">
-                        <div class="wui-i-avatar"></div>
-                    </div>
+                   <!-- <div class="wui-i-friend">
+                        <div  class="wui-i-avatarbox">
+                            <div class="wui-i-avatar"></div>
+                        </div>
                         <div class="wui-i-info">
                             <li class="wui-i-money">2.05元</li>
                             <li class="wui-i-name">一起来笑</li>
                         </div>
-                    </div>
-                    <div class="wui-i-friend">
-                    <div  class="wui-i-avatarbox">
-                        <div class="wui-i-avatar"></div>
-                    </div>
-                        <div class="wui-i-info">
-                            <li class="wui-i-money">2.05元</li>
-                            <li class="wui-i-name">一起来笑</li>
-                        </div>
-                    </div>
-                    <div class="wui-i-friend">
-                    <div  class="wui-i-avatarbox">
-                        <div class="wui-i-avatar"></div>
-                    </div>
-                        <div class="wui-i-info">
-                            <li class="wui-i-money">2.05元</li>
-                            <li class="wui-i-name">一起来笑</li>
-                        </div>
-                    </div>
-                    <div class="wui-i-friend">
-                    <div  class="wui-i-avatarbox">
-                        <div class="wui-i-avatar"></div>
-                    </div>
-                        <div class="wui-i-info">
-                            <li class="wui-i-money">2.05元</li>
-                            <li class="wui-i-name">一起来笑</li>
-                        </div>
-                    </div>
-                    <div class="wui-i-friend">
-                    <div  class="wui-i-avatarbox">
-                        <div class="wui-i-avatar"></div>
-                    </div>
-                        <div class="wui-i-info">
-                            <li class="wui-i-money">2.05元</li>
-                            <li class="wui-i-name">一起来笑</li>
-                        </div>
-                    </div>
-                    <div class="wui-i-friend">
-                    <div  class="wui-i-avatarbox">
-                        <div class="wui-i-avatar"></div>
-                    </div>
-                        <div class="wui-i-info">
-                            <li class="wui-i-money">2.05元</li>
-                            <li class="wui-i-name">一起来笑</li>
-                        </div>
-                    </div>
-
+                    </div> -->
                 <!-- 测试格式end -->
                 </div>
             </div>
