--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -52,7 +52,7 @@
     }
     .xui-successHint {
         background: no-repeat scroll 0 0 url("/termite_static/img/component/redpacket/success_msg.png");
-         border-radius: 3px;
+        border-radius: 3px;
         left: 12%;
         padding: 16% 10% 16% 9%;
         position: fixed;
@@ -63,6 +63,15 @@
         text-align: center;
         background-position: 5px -20px;
         background-size: 85%;
+    }
+    .xui-successHint{
+        color:#3E1917;
+    }
+    .xui-successHint .xui-i-msg{
+        color:#3E1917;
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
     }
     .xui-successHint .xui-i-intro_text {
         font-weight: bold;
@@ -141,6 +150,7 @@
 
     <div class="xui-powerSucceed none">
         <div class="f15 xui-successHint xui-spritebg">
+            <p class="xui-i-msg none">现金红包已领取成功,系统会在24小时内把现金打入您的钱包，请注意查收！</p>
             <div style="display: inline-block;color: #333;width: 75%;">
                 <p class="xui-i-intro_text">您已为<span class="wa-pageownername">"未命名"</span>贡献</p>
                 <p class="xui-i-intro_num"><span class="xui-i-num">+</span><span class="xui-i-num wa-helpmoneynumber">0.00</span><span>元</span></p>
