--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1691,4 +1691,20 @@ li.wui-selectBox-display-table {
     color: #FFFFFF;
 }
 
+.wui-red_packet-container .wui-i-rules-content{
+    background-color: blue;
+    background: no-repeat scroll 0 0 url("/termite_static/img/component/redpacket/rules.png");
+    border-radius: 3px;
+    left: 14%;
+    padding: 10px 10px 16px 9px;
+    position: fixed;
+    top: 16%;
+    width: 64%;
+    height: 70%;
+    z-index: 11111;
+    text-align: center;
+    background-position: -2px -48px;
+    background-size: 99%;
+}
+
 /*百宝箱 拼红包 red packet CSS-- end*/
