活动规则弹窗

--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -27,8 +27,13 @@
                             <i class="wui-i-star"></i><p>活动规则</p><i class="wui-i-star"></i>
                         </span>
                     </div>
-                    <div class="wui-i-rules-content ">
-                        {{component.model.rules|safe}}
+                    <div class="wui-i-rules-contentbox">
+                        <div class="wui-i-rules-content">
+                            <div class="wui-i-title-box">
+                                <p class="wui-i-title">活动规则</p>
+                            </div>
+                            {{component.model.rules|safe}}
+                        </div>
                     </div>
                 </div>
             </div>
