--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -28,6 +28,9 @@
                         </span>
                     </div>
                     <div class="wui-i-rules-contentbox">
+                        <div class="wui-i-closebtn">
+                            ×
+                        </div>
                         <div class="wui-i-rules-content">
                             <div class="wui-i-title-box">
                                 <p class="wui-i-title">活动规则</p>
