--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
@@ -61,6 +61,18 @@
 				</div>
 			</div>
 		</div>
+		<div class="xui-form disT">
+			<div class="xui-col disTc">
+				<div class="xui-i-item">
+					<label>红包类型：</label>
+					<select class="" id="red_packet_type" name="red_packet_type">
+						<option value="all">全部</option>
+						<option value="random">拼手气</option>
+						<option value="regular">普通</option>
+					</select>
+				</div>
+			</div>
+		</div>
 		<div class="xui-btn-group">
 			<a class="btn btn-primary mr40 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;询</a>
 			<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;置</a>
@@ -269,11 +281,13 @@ $(document).ready(function() {
 		var status = $.trim($('[name="status"]').val());
 		var startTime = $.trim($('[name="start_time"]').val());
 		var endTime = $.trim($('[name="end_time"]').val());
+		var redPacketType = $.trim($('[name="red_packet_type"]').val());
 		table.reload({
 			name: name,
 			status: status,
 			start_time: startTime,
-			end_time: endTime
+			end_time: endTime,
+			red_packet_type: redPacketType
 		}, {
 			emptyDataHint: '没有符合条件的数据'
 		});
@@ -281,9 +295,10 @@ $(document).ready(function() {
 	
 	$('.xa-reset').click(function(event) {
 		$('[name="name"]').val('');
-		$('[name="status"]').val('0');
+		$('[name="status"]').val('-1');
 		$('[name="start_time"]').val('');
 		$('[name="end_time"]').val('');
+		$('[name="red_packet_type"]').val('all');
 	});
 
 });
