--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -21,7 +21,7 @@
         <div class="wui-i-body">
             <div class="wui-i-help_group">
                 <div class="wui-i-shop_circle"></div>
-                <div class="wui-i-rules xa-rules">
+                <div class="wui-i-rules xa-rules none">
                     <div class="wui-i-title">
                         <span class="wui-i-rules-title-content">
                             <i class="wui-i-star"></i><p>活动规则</p><i class="wui-i-star"></i>
