--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -66,12 +66,27 @@
     }
     .xui-successHint{
         color:#3E1917;
+
     }
     .xui-successHint .xui-i-msg{
         color:#3E1917;
         width: 70%;
         margin-left: auto;
         margin-right: auto;
+    }
+    .xui-successHint .wui-i-closebtn{
+        color: white;
+        font-size: x-large;
+        font-weight: bold;
+        width: 30px;
+        height: 30px;
+        background: #FF422D;
+        text-align: center;
+        border-radius: 100px;
+        position: relative;
+        left: 96%;
+        top: -111%;
+        line-height: 30px;
     }
     .xui-successHint .xui-i-intro_text {
         font-weight: bold;
@@ -81,7 +96,7 @@
         font-weight: bold;
     }
     .xui-successHint .xui-i-num {
-        font-size: 280%;
+        font-size: 220%;
     }
     .xui-attention{
         position: fixed;
@@ -148,13 +163,16 @@
 {% block content-panel %}
     {{ page_html_content|safe }}
 
-    <div class="xui-powerSucceed none">
+    <div class="xui-powerSucceed">
         <div class="f15 xui-successHint xui-spritebg">
             <p class="xui-i-msg none">现金红包已领取成功,系统会在24小时内把现金打入您的钱包，请注意查收！</p>
             <div style="display: inline-block;color: #333;width: 75%;">
                 <p class="xui-i-intro_text">您已为<span class="wa-pageownername">"未命名"</span>贡献</p>
                 <p class="xui-i-intro_num"><span class="xui-i-num">+</span><span class="xui-i-num wa-helpmoneynumber">0.00</span><span>元</span></p>
-            </div>
+                </div>
+                <div class="wui-i-closebtn">
+                    ×
+                </div>
         </div>
     </div>
     <!-- 非会员引导 -->
