--- a/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
@@ -376,7 +376,7 @@
 
                 <div class="modal-body ml15">
                     <div>
-                        <p>登录<a href="https://pay.weixin.qq.com">https://pay.weixin.qq.com</a>，进入微信支付商务平台。选择账户中心—账户设置—API安全。</p>
+                        <p>登录<a href="https://pay.weixin.qq.com" target="_blank">https://pay.weixin.qq.com</a>，进入微信支付商务平台。选择账户中心—账户设置—API安全。</p>
                     </div>
                     <div>
                         <p>找到API证书，点击“下载证书”</p>
